# cats-dogs-classifier

./: .gitignore  Changelog.md  INSTALL.md  README.md  V3_rejected_images.txt  requirements.txt  test_real_workers.py
cpp_inference/: CMakeLists.txt  main.cpp
notebooks/: 01_explore_data.ipynb  02a_data_cleaning.ipynb  02b_data_cleaning_organized_tiny_dataset.ipynb  02c_data_cleaning_organized_entire_dataset.ipynb  02d_data_cleaning_create_clean_dataset.ipynb  02e_corrupt_files.ipynb  03_data_preprocessing.ipynb  04_results_analysis.ipynb
outputs/: clip_cleanup_exclusions.txt  clip_exclude_details_v3plus.txt  clip_exclude_list_v3plus.txt  clip_rescued_images_v3plus.txt  exclude_list.txt
outputs/splits/: train_val_test_split.json
scripts/: benchmark_inference.py  evaluate.py  evaluate_tensorrt.py  export_model.py  inference.py  run_experiments.py  train.py  train_final.py  train_final_resnet18.py
scripts/Active Learning Future Project/: train_final_al_entropy.py  train_final_al_entropy_diversity.py  train_final_al_random.py  train_final_al_uncertainty.py  train_final_al_uncertainty_diversity.py
